More edits from @mwcraig
(cherry picked from commit b19ad49f10fd2df7f38582e850e6cc9610f0a49c)

--- a/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
+++ b/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
@@ -289,6 +289,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "On the left we have plotted this mask, which has a value of 1 (or True) shown in black where the data is bad, and 0 (or False) shown in white where the data is good. \n",
+    "\n",
+    "After the mask is applied to the data - on the right above - the data values \"behind\" the masked values are shown in white."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Perform scalar background estimation"
    ]
   },
@@ -300,6 +309,8 @@
     "\n",
     "By \"scalar estimation\", we mean the calculation of a single value (such as the mean or median) to represent the value of the background for our entire two-dimensional dataset. This is in contrast to a two-dimensional background, where the estimated background is represented as an array of values that can vary spatially with the dataset. We will calculate a 2D background in the upcoming section.\n",
     "\n",
+    "### Calculate scalar background value\n",
+    "\n",
     "Here we will calculate the mean, median, and mode using sigma clipping. With sigma clipping, the data is iteratively clipped to exclude data points outside of a certain sigma (standard deviation), thus removing some of the noise from the data before determining statistical values."
    ]
   },
@@ -309,7 +320,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean, median, std = sigma_clipped_stats(xdf_image.data, sigma=3.0, maxiters=5, mask=xdf_image.mask)"
+    "# Calculate statistics with masking\n",
+    "mean, median, std = sigma_clipped_stats(xdf_image.data, sigma=3.0, maxiters=5, mask=xdf_image.mask)\n",
+    "\n",
+    "# Calculate statistics without masking\n",
+    "stats_nomask = sigma_clipped_stats(xdf_image.data, sigma=3.0, maxiters=5)"
    ]
   },
   {
@@ -317,16 +332,6 @@
    "metadata": {},
    "source": [
     "But what difference does this sigma clipping make? And how important is masking, anyway? Let's visualize these statistics to get an idea:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the data without masking\n",
-    "stats_nomask = sigma_clipped_stats(xdf_image.data, sigma=3.0, maxiters=5)"
    ]
   },
   {
@@ -344,36 +349,38 @@
     "ax2.hist(xdf_image[~xdf_image.mask], bins=100, range=flux_range)\n",
     "\n",
     "# Plot lines for each kind of mean\n",
-    "ax1.axvline(mean, label='Masked \\& Clipped', c='C1', lw=3)\n",
-    "ax1.axvline(np.average(xdf_image[~xdf_image.mask]), label='Masked', c='C2', ls='--', lw=3)\n",
-    "ax1.axvline(stats_nomask[0], label='Clipped', c='C3', ls='-.', lw=3)\n",
-    "ax1.axvline(np.average(xdf_image), label='Neither', c='C6', ls=':', lw=3)\n",
+    "ax1.axvline(mean, label='Masked & Clipped', c='C1', ls='-.', lw=3)\n",
+    "ax1.axvline(np.average(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
+    "ax1.axvline(stats_nomask[0], label='Clipped', c='C3', ls=':', lw=3)\n",
+    "ax1.axvline(np.average(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
     "\n",
     "ax1.set_xlim(flux_range)\n",
     "ax1.set_xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), fontsize=14)\n",
     "ax1.set_ylabel('Frequency', fontsize=14)\n",
-    "ax1.set_title('Effect of Sigma-Clipping and Masking on Mean', fontsize=16)\n",
-    "ax1.legend(fontsize=11)\n",
-    "\n",
+    "ax1.set_title('Effect of Sigma-Clipping \\n and Masking on Mean', fontsize=16)\n",
     "\n",
     "# Plot lines for each kind of median\n",
     "# Note: use np.ma.median rather than np.median for masked arrays\n",
-    "ax2.axvline(median, label='Masked \\& Clipped', c='C1', lw=3)\n",
-    "ax2.axvline(np.ma.median(xdf_image[~xdf_image.mask]), label='Masked', c='C2', ls='--', lw=3)\n",
-    "ax2.axvline(stats_nomask[1], label='Clipped', c='C3', ls='-.', lw=3)\n",
-    "ax2.axvline(np.ma.median(xdf_image), label='Neither', c='C6', ls=':', lw=3)\n",
+    "ax2.axvline(median, label='Masked & Clipped', c='C1', ls='-.', lw=3)\n",
+    "ax2.axvline(np.ma.median(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
+    "ax2.axvline(stats_nomask[1], label='Clipped', c='C3', ls=':', lw=3)\n",
+    "ax2.axvline(np.ma.median(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
     "\n",
     "ax2.set_xlim(flux_range)\n",
     "ax2.set_xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), fontsize=14)\n",
-    "ax2.set_title('Effect of Sigma-Clipping and Masking on Median', fontsize=16)\n",
-    "ax2.legend(fontsize=11)"
+    "ax2.set_title('Effect of Sigma-Clipping \\n and Masking on Median', fontsize=16)\n",
+    "\n",
+    "# Add legend\n",
+    "ax1.legend(fontsize=11, loc='lower center', bbox_to_anchor=(1.1, -0.45), ncol=2, handlelength=6)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just from simply looking at the distribution of the data, it is pretty easy to see how sigma-clipping and masking improve the calculation of the mean and median.\n",
+    "Just from simply looking at the distribution of the data, it is pretty easy to see how sigma-clipping and masking improve the calculation of the mean and median: the masked & sigma-clipped values are closest to the center of the distribution in both cases. It's also worthwhile to note that the median does a better job even without masking or clipping!\n",
+    "\n",
+    "### Subtract scalar background value\n",
     "\n",
     "But enough looking at numbers, let's actually remove the background from the data. By using the `subtract()` method of the `CCDData` class, we can subtract the mean background while maintaining the metadata and mask of our original CCDData object:"
    ]
@@ -385,7 +392,7 @@
    "outputs": [],
    "source": [
     "# Calculate the scalar background subtraction, maintaining metadata, unit, and mask\n",
-    "xdf_scalar_bkgdsub = xdf_image.subtract(mean * u.ct / u.s)"
+    "xdf_scalar_bkgdsub = xdf_image.subtract(mean * u.electron / u.s)"
    ]
   },
   {
@@ -495,13 +502,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Set up the figure with subplots\n",
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
-    "# Plot the data\n",
+    "# Plot the background\n",
     "background_clipped = np.clip(bkg.background, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, background_clipped), norm=norm_image)\n",
     "\n",
@@ -525,6 +534,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You might notice that not all areas of the background array have mesh boxes over them (look for those boxes that do not have a `+`). If you compare this background array with the original data, you'll see that these un-boxed areas contain particularly bright sources, and thus are not being included in the background estimate .\n",
+    "\n",
     "And how does the data look if we use this background subtraction method (again maintaining the attributes of the CCDData object)?"
    ]
   },
@@ -535,7 +546,7 @@
    "outputs": [],
    "source": [
     "# Calculate the 2D background subtraction, maintaining metadata, unit, and mask\n",
-    "xdf_2d_bkgdsub = xdf_image.subtract(bkg.background * u.ct / u.s)"
+    "xdf_2d_bkgdsub = xdf_image.subtract(bkg.background * u.electron / u.s)"
    ]
   },
   {
