--- a/notebooks/photutils/02_source_detection/02_source_detection.ipynb
+++ b/notebooks/photutils/02_source_detection/02_source_detection.ipynb
@@ -113,7 +113,9 @@
    "source": [
     "As described in the introduction, we will be using Hubble eXtreme Deep Field (XDF) data. Since this file is too large to store on GitHub, we will just use `astropy` to directly download the file from the STScI archive: https://archive.stsci.edu/prepds/xdf/ \n",
     "\n",
-    "(Generally, the best package for web queries of astronomical data is [Astroquery](https://astroquery.readthedocs.io/en/latest/); however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with Astroquery.)"
+    "(Generally, the best package for web queries of astronomical data is [Astroquery](https://astroquery.readthedocs.io/en/latest/); however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with Astroquery.)\n",
+    "\n",
+    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, our data is in electrons per second."
    ]
   },
   {
@@ -123,10 +125,7 @@
    "outputs": [],
    "source": [
     "url = 'https://archive.stsci.edu/pub/hlsp/xdf/hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits'\n",
-    "with fits.open(url) as hdulist:\n",
-    "    hdulist.info()\n",
-    "    data = hdulist[0].data\n",
-    "    header = hdulist[0].header"
+    "xdf_image = CCDData.read(url, unit=u.electron / u.s)"
    ]
   },
   {
@@ -143,24 +142,8 @@
    "outputs": [],
    "source": [
     "# Define the mask\n",
-    "mask = data == 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, our data is in electrons per second."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unit = u.electron / u.s\n",
-    "xdf_image = CCDData(data, unit=unit, meta=header, mask=mask)"
+    "mask = xdf_image.data == 0\n",
+    "xdf_image.mask = mask"
    ]
   },
   {
@@ -267,8 +250,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daofind = DAOStarFinder(fwhm=5.0, threshold=20.*std)\n",
-    "sources_dao = daofind(xdf_image * ~xdf_image.mask)    \n",
+    "daofind = DAOStarFinder(fwhm=5.0, threshold=20. * std)\n",
+    "sources_dao = daofind(np.ma.masked_where(xdf_image.mask, xdf_image))    \n",
     "print(sources_dao)"
    ]
   },
@@ -376,8 +359,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iraffind = IRAFStarFinder(fwhm=5.0, threshold=20.*std)\n",
-    "sources_iraf = iraffind(xdf_image * ~xdf_image.mask)    \n",
+    "iraffind = IRAFStarFinder(fwhm=5.0, threshold=20. * std)\n",
+    "sources_iraf = iraffind(np.ma.masked_where(xdf_image.mask, xdf_image))    \n",
     "print(sources_iraf)"
    ]
   },
@@ -484,11 +467,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iraffind_match = IRAFStarFinder(fwhm=5.0, threshold=20.*std, \n",
+    "iraffind_match = IRAFStarFinder(fwhm=5.0, threshold=20. * std, \n",
     "                                sharplo=0.2, sharphi=1.0, \n",
     "                                roundlo=-1.0, roundhi=1.0,\n",
     "                                minsep_fwhm=0.0)\n",
-    "sources_iraf_match = iraffind_match(xdf_image * ~xdf_image.mask)    \n",
+    "sources_iraf_match = iraffind_match(np.ma.masked_where(xdf_image.mask, xdf_image))    \n",
     "print(sources_iraf_match)"
    ]
   },
@@ -579,7 +562,7 @@
    "outputs": [],
    "source": [
     "sources_findpeaks = find_peaks(xdf_image.data, mask=xdf_image.mask, \n",
-    "                               threshold=20.*std, box_size=30, \n",
+    "                               threshold=20. * std, box_size=30, \n",
     "                               centroid_func=centroid_2dg)    \n",
     "print(sources_findpeaks)"
    ]
@@ -609,7 +592,7 @@
     "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('find\\_peaks Sources')"
+    "ax1.set_title('find_peaks Sources')"
    ]
   },
   {
@@ -724,26 +707,21 @@
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), norm=norm_image)\n",
     "ax1.scatter([x for x, y in list(dao_findpeaks_match)], [y for x, y in list(dao_findpeaks_match)],\n",
     "            s=30, marker='s', lw=1,  facecolor='None', edgecolor='#EE7733',\n",
-    "            label='Found by DAO \\& find\\_peaks')\n",
+    "            label='Found by DAO & find_peaks')\n",
     "ax1.scatter([x for x, y in list(dao_iraf_match)], [y for x, y in list(dao_iraf_match)],\n",
     "            s=30, marker='D', lw=1, facecolor='None', edgecolor='#EE3377',\n",
-    "            label='Found by DAO \\& IRAF')\n",
+    "            label='Found by DAO & IRAF')\n",
     "ax1.scatter([x for x, y in list(iraf_findpeaks_match)], [y for x, y in list(iraf_findpeaks_match)],\n",
     "            s=30, marker='o', lw=1, facecolor='None', edgecolor='#0077BB',\n",
-    "            label='Found by IRAF \\& find\\_peaks')\n",
+    "            label='Found by IRAF & find_peaks')\n",
     "ax1.scatter([x for x, y in list(all_match)], [y for x, y in list(all_match)],\n",
     "            s=30, marker='o', lw=1.2, linestyle=':',facecolor='None', edgecolor='#BBBBBB',\n",
     "            label='Found by all methods')\n",
-    "ax1.legend(ncol=2)\n",
     "\n",
-    "# Define the colorbar\n",
-    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "# Add legend\n",
+    "ax1.legend(ncol=2, loc='lower center', bbox_to_anchor=(0.5, -0.25))\n",
     "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
-    "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_title('Sources Found by Different Methods')"
@@ -976,7 +954,7 @@
    "outputs": [],
    "source": [
     "# Define the approximate isophotal extent\n",
-    "r = 4.\n",
+    "r = 4.  # pixels\n",
     "\n",
     "# Create the apertures\n",
     "apertures = []\n",
