--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -115,7 +115,9 @@
    "source": [
     "As described in the introduction, we will be using Hubble eXtreme Deep Field (XDF) data. Since this file is too large to store on GitHub, we will just use `astropy` to directly download the file from the STScI archive: https://archive.stsci.edu/prepds/xdf/ \n",
     "\n",
-    "(Generally, the best package for web queries of astronomical data is [Astroquery](https://astroquery.readthedocs.io/en/latest/); however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with Astroquery.)"
+    "(Generally, the best package for web queries of astronomical data is [Astroquery](https://astroquery.readthedocs.io/en/latest/); however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with Astroquery.)\n",
+    "\n",
+    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, our data is in electrons per second."
    ]
   },
   {
@@ -125,10 +127,7 @@
    "outputs": [],
    "source": [
     "url = 'https://archive.stsci.edu/pub/hlsp/xdf/hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits'\n",
-    "with fits.open(url) as hdulist:\n",
-    "    hdulist.info()\n",
-    "    data = hdulist[0].data\n",
-    "    header = hdulist[0].header"
+    "xdf_image = CCDData.read(url, unit=u.electron / u.s)"
    ]
   },
   {
@@ -145,24 +144,8 @@
    "outputs": [],
    "source": [
     "# Define the mask\n",
-    "mask = data == 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, our data is in electrons (counts) per second."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unit = u.electron / u.s\n",
-    "xdf_image = CCDData(data, unit=unit, meta=header, mask=mask)"
+    "mask = xdf_image.data == 0\n",
+    "xdf_image.mask = mask"
    ]
   },
   {
@@ -308,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So thanks to `find_peaks`, we now we know the positions of all our sources. Next, we need to define apertures for each source. First, as the simplest example, let's try using circular apertures of a fixed size.\n",
+    "So thanks to `find_peaks`, we now we know the positions of all our sources. Next, we need to define apertures for each source. First, as the simplest example, let's try using circular apertures of a fixed radius: 10 pixels.\n",
     "\n",
     "### Circular Apertures"
    ]
@@ -328,9 +311,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define the aperture\n",
+    "# Define the aperture\n",
     "position = (sources_findpeaks['x_centroid'], sources_findpeaks['y_centroid'])\n",
-    "radius = 10.\n",
+    "radius = 10.  # pixels\n",
     "circular_aperture = CircularAperture(position, r=radius)"
    ]
   },
@@ -430,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = 3.  # approximate isophotal extent of semimajor axis\n",
+    "r = 3.  # pixels; approximate isophotal extent of semimajor axis\n",
     "\n",
     "# Create the apertures\n",
     "elliptical_apertures = []\n",
@@ -490,7 +473,9 @@
     "\n",
     "At the moment, the positions of our apertures are in pixels, relative to our data array. However, if you need aperture positions in terms of celestial coordinates, `photutils` also includes aperture objects that can be integrated with Astropy's `SkyCoords`.\n",
     "\n",
-    "Fortunately this is extremely easy when we use the [World Coordinate System (WCS)](http://docs.astropy.org/en/stable/wcs/) to produce a WCS object from the header of the FITS file containing our image, and then the `to_sky()` method to transform our `EllipticalAperture` objects into `SkyEllipticalAperture` objects."
+    "Fortunately this is extremely easy when we use the [World Coordinate System (WCS)](http://docs.astropy.org/en/stable/wcs/) to decipher a WCS object from the header of the FITS file containing our image, and then the `to_sky()` method to transform our `EllipticalAperture` objects into `SkyEllipticalAperture` objects. \n",
+    "\n",
+    "And, better yet, our `CCDData` object has held onto its WCS information ever since we created it!"
    ]
   },
   {
@@ -499,16 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy.wcs import WCS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wcs = WCS(header)\n",
+    "wcs = xdf_image.wcs\n",
     "sky_elliptical_apertures = [ap.to_sky(wcs) for ap in elliptical_apertures]"
    ]
   },
@@ -528,7 +504,7 @@
     "from photutils import SkyEllipticalAperture\n",
     "from astropy.coordinates import SkyCoord\n",
     "\n",
-    "r = 3.  # approximate isophotal extent of semimajor axis\n",
+    "r = 3.  # pixels; approximate isophotal extent of semimajor axis\n",
     "\n",
     "# Create the apertures\n",
     "sky_elliptical_apertures = []\n",
@@ -645,8 +621,8 @@
     "Woohoo!\n",
     "\n",
     "Unfortunately for our purposes, the `aperture_photometry` function can be only used alone for one of the two cases:\n",
-    "* Identical apertures at distinct positions (e.g. circular apertures with `r = 3` for many sources)\n",
-    "* Distinct apertures at identical positions (e.g. two circular apertures with `r = 3` and `r = 5` for one source)\n",
+    "* Identical apertures at distinct positions (e.g. circular apertures with `r = 3` pixels for many sources)\n",
+    "* Distinct apertures at identical positions (e.g. two circular apertures with `r = 3` pixels and `r = 5` pixels for one source)\n",
     "\n",
     "Since our elliptical apertures are distinct apertures at distinct positions, we need to do a little more work to get a single table of photometric values.\n",
     "\n",
@@ -762,7 +738,7 @@
     "\n",
     "In the [background estimation notebook](../01_background_estimation/01_background_estimation.ipynb), we explored how to perform global background subtraction of image data with `photutils`. However, you can also use `photutils` to perform local background estimations for aperture corrections.\n",
     "\n",
-    "To estimate the local background for each aperture, measure the counts within annulus apertures around (but not including!) each source. In our example, we defined elliptical apertures with `r = 3` to measure the counts within each source. To calculate the background for each source, let's measure the counts elliptical annuli between `r = 3.5` and `r = 5`."
+    "To estimate the local background for each aperture, measure the counts within annulus apertures around (but not including!) each source. In our example, we defined elliptical apertures with `r = 3` pixels to measure the counts within each source. To calculate the background for each source, let's measure the counts elliptical annuli between `r = 3.5` pixels and `r = 5` pixels."
    ]
   },
   {
