--- a/notebooks/photutils/04_psf_photometry/04_psf_photometry.ipynb
+++ b/notebooks/photutils/04_psf_photometry/04_psf_photometry.ipynb
@@ -119,7 +119,9 @@
    "source": [
     "As described in the introduction, we will be using Hubble eXtreme Deep Field (XDF) data. Since this file is too large to store on GitHub, we will just use `astropy` to directly download the file from the STScI archive: https://archive.stsci.edu/prepds/xdf/ \n",
     "\n",
-    "(Generally, the best package for web queries of astronomical data is [Astroquery](https://astroquery.readthedocs.io/en/latest/); however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with Astroquery.)"
+    "(Generally, the best package for web queries of astronomical data is [Astroquery](https://astroquery.readthedocs.io/en/latest/); however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with Astroquery.)\n",
+    "\n",
+    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, our data is in electrons per second."
    ]
   },
   {
@@ -129,10 +131,7 @@
    "outputs": [],
    "source": [
     "url = 'https://archive.stsci.edu/pub/hlsp/xdf/hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits'\n",
-    "with fits.open(url) as hdulist:\n",
-    "    hdulist.info()\n",
-    "    data = hdulist[0].data\n",
-    "    header = hdulist[0].header"
+    "xdf_image = CCDData.read(url, unit=u.electron / u.s)"
    ]
   },
   {
@@ -149,24 +148,8 @@
    "outputs": [],
    "source": [
     "# Define the mask\n",
-    "mask = data == 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, our data is in electrons (counts) per second."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unit = u.electron / u.s\n",
-    "xdf_image = CCDData(data, unit=unit, meta=header, mask=mask)"
+    "mask = xdf_image.data == 0\n",
+    "xdf_image.mask = mask"
    ]
   },
   {
