Fix typographic error

--- a/notebooks/01-00-Understanding-an-astronomical-CCD-image.ipynb
+++ b/notebooks/01-00-Understanding-an-astronomical-CCD-image.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An astronomical image like the one shown below is essentually a two-dimensional\n",
+    "An astronomical image like the one shown below is essentially a two-dimensional\n",
     "array of values. In an ideal world, the value of each pixel (a pixel being one\n",
     "element of the array) would be directly proportional to the amount of light that\n",
     "fell on the pixel during the time the camera's shutter was open.\n",
@@ -127,9 +127,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
