Partial update of authors, resources, acknowledgments

--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -24,6 +24,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Credits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Authors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This guide was written by Matt Craig and Lauren Chambers.\n",
+    "\n",
+    "New contributors will be moved from the acknowledgments to the author list when they have either written roughly the equivalent of one section or provided detailed review of several sections. This is intended as a rough guideline, and when in doubt we will lean towards including people as authors rather than excluding them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funding\n",
+    "\n",
+    "Made possible by the Astropy Project and ScienceBetter Consulting through financial support from the Community Software Initiative at the Space Telescope Science Institute."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Acknowledgments\n",
+    "\n",
+    "The following people contributed to this work by making suggestions, testing code, or providing feedback on drafts. We are greatful for their assistance!\n",
+    "\n",
+    "+ Isobel Snellenberger\n",
+    "+ Stuart Littlefair\n",
+    "+ Richard Hendricks\n",
+    "+ Thomas Stibor\n",
+    "\n",
+    "If you have provided feedback and are not listed above, we apologize -- please [open an issue here](https://github.com/mwcraig/ccd-reduction-and-photometry-guide/issues/new) so we can fix it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resources\n",
+    "\n",
+    "This astronomical content work was inspired by, and guided by, the excellent resources below:\n",
+    "\n",
+    "+ [\"A User's Guide to CCD Reductions with IRAF\" (Massey 1997)](http://www.ifa.hawaii.edu/~meech/a399/handouts/ccduser3.pdf) is very thorough, but IRAF has become more difficult to install over time and is no longer supported.\n",
+    "+ [\"A User's Guide to Stellar CCD Photometry with IRAF\" (Massey and Davis 1992)](https://www.mn.uio.no/astro/english/services/it/help/visualization/iraf/daophot2.pdf).\n",
+    "+ [The Handbook of Astronomical Image Processing](https://www.amazon.com/Handbook-Astronomical-Image-Processing/dp/0943396824) by Richard Berry and James Burnell. This provides a very detailed overview of data reduction and photometry. One virtue is its inclusion of *real* images with defects.\n",
+    "+ The [AAVSO CCD Obseving Manual]() provides a complete introduction to CCD data reduction and photometry.  \n",
+    "+ [A Beginner's Guide to Working with Astronomical Data](https://arxiv.org/abs/1905.13189) is much broader than this guide. It includes an introduction to Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Software setup\n",
     "\n",
     "The recommended way to get set up to use this guide is to use the\n",
