--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This guide was written by Matt Craig and Lauren Chambers.\n",
+    "This guide was written by Matt Craig and Lauren Chambers. Editing was done by Lauren Glattly.\n",
     "\n",
     "New contributors will be moved from the acknowledgments to the author list when they have either written roughly the equivalent of one section or provided detailed review of several sections. This is intended as a rough guideline, and when in doubt we will lean towards including people as authors rather than excluding them."
    ]
@@ -60,9 +60,12 @@
     "\n",
     "The following people contributed to this work by making suggestions, testing code, or providing feedback on drafts. We are greatful for their assistance!\n",
     "\n",
-    "+ Isobel Snellenberger\n",
-    "+ Stuart Littlefair\n",
+    "+ Lia Corrales\n",
+    "+ Kelle Cruz\n",
     "+ Richard Hendricks\n",
+    "+ Stuart Littlefair\n",
+    "+ Isobel Snellenberger\n",
+    "+ Kris Stern\n",
     "+ Thomas Stibor\n",
     "\n",
     "If you have provided feedback and are not listed above, we apologize -- please [open an issue here](https://github.com/mwcraig/ccd-reduction-and-photometry-guide/issues/new) so we can fix it."
